# magic-mouse-gaps

./: CMakeLists.txt  Makefile  README.md  hyprpm.toml  main.cpp  meson.build
